fix form textarea overflow

--- a/style.css
+++ b/style.css
@@ -210,3 +210,8 @@ footer .about {
     border-left: 1px solid red;
     scale: 1.1;
 }
+
+form textarea {
+    max-width: 100%;
+    min-width: 100px;
+}
